--- a/data.html
+++ b/data.html
@@ -34,7 +34,7 @@
                 </li>
                 <li class="layui-nav-item layui-this">
                     <a href="data.html" class="layui-font-16">
-                        <i class="layui-icon layui-icon-table layui-font-16"></i>&nbsp;&nbsp;Data
+                        <i class="layui-icon layui-icon-form layui-font-16"></i>&nbsp;&nbsp;Data
                     </a>
                 </li>
                 <li class="layui-nav-item">
@@ -49,7 +49,7 @@
                 </li>
                 <li class="layui-nav-item">
                     <a href="leaderboard.html" class="layui-font-16">
-                        <i class="layui-icon layui-icon-template-1 layui-font-16"></i>&nbsp;&nbsp;Leaderboard
+                        <i class="layui-icon layui-icon-flag layui-font-16"></i>&nbsp;&nbsp;Leaderboard
                     </a>
                 </li>
                 <li class="layui-nav-item">
@@ -109,7 +109,7 @@
             <div id="echarts-pie" style="width: 100%; height:500px; padding-top: 50px;"></div>
         </div>
         <div class="section">
-            <h1>Data Apply</h1>
+            <h1>Data Request</h1>
             <br>
             <p>
                 <b>ClinicalLab</b>, a comprehensive clinical diagnosis agent alignment suite. ClinicalLab includes <b>ClinicalBench</b>,
@@ -127,7 +127,7 @@
             <br><br>
             <div class="layui-btn-container">
                 <button type="button" class="layui-btn layui-btn-fluid"
-                        onclick="window.location.href='谷歌问卷'"><i class="layui-icon layui-icon-release"></i>&nbsp;&nbsp;Apply for Data
+                        onclick="window.location.href='javascript:;'"><i class="layui-icon layui-icon-release"></i>&nbsp;&nbsp;Apply For Our Dataset
                 </button>
             </div>
         </div>
