--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 </li>
                 <li class="layui-nav-item">
                     <a href="data.html" class="layui-font-16">
-                        <i class="layui-icon layui-icon-table layui-font-16"></i>&nbsp;&nbsp;Data
+                        <i class="layui-icon layui-icon-form layui-font-16"></i>&nbsp;&nbsp;Data
                     </a>
                 </li>
                 <li class="layui-nav-item">
@@ -49,7 +49,7 @@
                 </li>
                 <li class="layui-nav-item">
                     <a href="leaderboard.html" class="layui-font-16">
-                        <i class="layui-icon layui-icon-template-1 layui-font-16"></i>&nbsp;&nbsp;Leaderboard
+                        <i class="layui-icon layui-icon-flag layui-font-16"></i>&nbsp;&nbsp;Leaderboard
                     </a>
                 </li>
                 <li class="layui-nav-item">
@@ -112,8 +112,8 @@
                 <button type="button" class="layui-btn layui-btn-radius layui-btn-primary layui-border-green"
                         onclick="window.location.href='leaderboard.html'">🏆&nbsp;&nbsp;Leaderboard
                 </button>
-                <button type="button" class="layui-btn layui-btn-radius layui-btn-primary layui-border-orange"
-                        onclick="window.location.href='data.html'"><i class="layui-icon layui-icon-table"></i>&nbsp;&nbsp;Data
+                <button type="button" class="layui-btn layui-btn-radius layui-btn-primary layui-border-blue"
+                        onclick="window.location.href='data.html'">📋&nbsp;&nbsp;Data
                 </button>
                 <button type="button" class="layui-btn layui-btn-radius layui-btn-primary layui-border-red"
                         onclick="window.location.href='javascript:;'">📃&nbsp;&nbsp;Paper
