--- a/data.html
+++ b/data.html
@@ -38,7 +38,7 @@
                     </a>
                 </li>
                 <li class="layui-nav-item">
-                    <a href="javascript:;" class="layui-font-16" target="_blank">
+                    <a href="https://arxiv.org/abs/2406.13890" class="layui-font-16" target="_blank">
                         <i class="layui-icon layui-icon-file-b layui-font-16"></i>&nbsp;&nbsp;Paper
                     </a>
                 </li>
@@ -53,7 +53,7 @@
                     </a>
                 </li>
                 <li class="layui-nav-item">
-                    <a href="index.html#submission" class="layui-font-16">
+                    <a href="submission.html" class="layui-font-16">
                         <i class="layui-icon layui-icon-upload-drag layui-font-16"></i>&nbsp;&nbsp;Submission
                     </a>
                 </li>
@@ -71,20 +71,18 @@
     <br><br>
     <div class="layui-container">
         <div class="section">
-            <h1>Data Processing</h1>
+            <h1>Data Processing & Quality</h1>
             <br>
             <p>
-                <b>ClinicalLab</b>, a comprehensive clinical diagnosis agent alignment suite. ClinicalLab includes <b>ClinicalBench</b>,
-                an end-to-end multi-departmental clinical diagnostic evaluation benchmark for evaluating medical agents
-                and LLMs. ClinicalBench is based on real cases that cover <b>24</b> departments and <b>150</b> diseases.
-                We ensure that ClinicalBench does not have data leakage. ClinicalLab also includes four novel metrics
-                (<b>ClinicalMetrics</b>) for evaluating the effectiveness of LLMs in clinical diagnostic tasks. We
-                evaluate <b>17</b> general and medical-domain LLMs and find that their performance varies significantly
-                across different departments. Based on these findings, in ClinicalLab, we propose <b>ClinicalAgent</b>,
-                an end-to-end clinical agent that aligns with real-world clinical diagnostic practices. We
-                systematically investigate the performance and applicable scenarios of variants of ClinicalAgent on
-                ClinicalBench. Our findings demonstrate the importance of aligning with modern medical practices in
-                designing medical agents.
+                The ClinicalBench benchmark is manually created by three senior clinicians and two AI researchers. As shown in the below figure, the creation process covers 4 key steps, as follows.
+                (1) The Data collection step focuses on authenticity, diversity, privacy. Based on department divisions and common disease types in each department, the medical team selects
+                representative real cases for each disease from the hospital case database with permission for research. Given that these clinical case data is the private information of hospitals,
+                the risk of data leakage to any LLMs is completely eliminated. (2) The Professional knowledge review step ensures the accuracy of the data. The team of doctors conducts a detailed
+                professional review of the diagnostic information, treatment process, and results of each case to ensure the medical accuracy and proficiency of the data. (3) The Privacy protection
+                and de-identification step ensures privacy protection. To protect patient privacy, the team of doctors conducts two rounds of independent reviews to identify and remove any content
+                that could reveal patient identities, treatment regions, or other sensitive information. (4) The Data integrity and compliance check step aims for completeness and ethical compliance.
+                Two AI researchers are responsible for reviewing the data to ensure that each record is complete, and meets the medical task requirements set. Additionally, they reconfirm that the
+                dataset does not contain any sensitive information and strictly complies with the ethical guidelines.
             </p>
             <div class="introduction-box">
                 <img src="static/images/figure2.svg" alt="figure2">
@@ -94,17 +92,10 @@
             <h1>Data Statistics</h1>
             <br>
             <p>
-                <b>ClinicalLab</b>, a comprehensive clinical diagnosis agent alignment suite. ClinicalLab includes <b>ClinicalBench</b>,
-                an end-to-end multi-departmental clinical diagnostic evaluation benchmark for evaluating medical agents
-                and LLMs. ClinicalBench is based on real cases that cover <b>24</b> departments and <b>150</b> diseases.
-                We ensure that ClinicalBench does not have data leakage. ClinicalLab also includes four novel metrics
-                (<b>ClinicalMetrics</b>) for evaluating the effectiveness of LLMs in clinical diagnostic tasks. We
-                evaluate <b>17</b> general and medical-domain LLMs and find that their performance varies significantly
-                across different departments. Based on these findings, in ClinicalLab, we propose <b>ClinicalAgent</b>,
-                an end-to-end clinical agent that aligns with real-world clinical diagnostic practices. We
-                systematically investigate the performance and applicable scenarios of variants of ClinicalAgent on
-                ClinicalBench. Our findings demonstrate the importance of aligning with modern medical practices in
-                designing medical agents.
+                ClinicalBench is a fine-grained evaluation benchmark specifically designed for multi-departmental clinical diagnosis, covering 24 departments such as pediatrics, orthopedics, and
+                neurosurgery. The below figure presents detailed information about the various departments covered by ClinicalBench. It involves 150 different diseases, each comprising 10 specific
+                cases, totaling 1500 samples, with an average of about 1000 tokens per case. To the best of our knowledge, ClinicalBench is the most comprehensive clinical diagnostics evaluation
+                benchmark to date, covering the widest range of departments and diseases.
             </p>
             <div id="echarts-pie" style="width: 100%; height:500px; padding-top: 50px;"></div>
         </div>
@@ -112,22 +103,14 @@
             <h1>Data Request</h1>
             <br>
             <p>
-                <b>ClinicalLab</b>, a comprehensive clinical diagnosis agent alignment suite. ClinicalLab includes <b>ClinicalBench</b>,
-                an end-to-end multi-departmental clinical diagnostic evaluation benchmark for evaluating medical agents
-                and LLMs. ClinicalBench is based on real cases that cover <b>24</b> departments and <b>150</b> diseases.
-                We ensure that ClinicalBench does not have data leakage. ClinicalLab also includes four novel metrics
-                (<b>ClinicalMetrics</b>) for evaluating the effectiveness of LLMs in clinical diagnostic tasks. We
-                evaluate <b>17</b> general and medical-domain LLMs and find that their performance varies significantly
-                across different departments. Based on these findings, in ClinicalLab, we propose <b>ClinicalAgent</b>,
-                an end-to-end clinical agent that aligns with real-world clinical diagnostic practices. We
-                systematically investigate the performance and applicable scenarios of variants of ClinicalAgent on
-                ClinicalBench. Our findings demonstrate the importance of aligning with modern medical practices in
-                designing medical agents.
+                In the appendix of our paper, we present examples from the ClinicalBench dataset, including both Chinese and English versions. Please note that accessing the ClinicalBench dataset
+                requires an application. If you wish to access the full dataset, please read the licensing documentation and submit an access request. We will send the data to your specified email
+                address within 48 hours.
             </p>
             <br><br>
             <div class="layui-btn-container">
                 <button type="button" class="layui-btn layui-btn-fluid"
-                        onclick="window.location.href='javascript:;'"><i class="layui-icon layui-icon-release"></i>&nbsp;&nbsp;Apply For Our Dataset
+                        onclick="window.location.href='https://forms.gle/Tkq5UTinW7bBB6388'"><i class="layui-icon layui-icon-release"></i>&nbsp;&nbsp;Apply For Our Dataset
                 </button>
             </div>
         </div>
@@ -135,13 +118,13 @@
     <br><br><br><br>
 </div>
 <!-- 页脚部分 -->
-<div class="ws-footer">
+<!--<div class="ws-footer">
     <div class="layui-container">
         <div class="permission">
             <p>© 2023 - 2024 Vaneval AI</p>
         </div>
     </div>
-</div>
+</div>-->
 <script src="static/layui/layui.js"></script>
 <script src="static/js/echarts.min.js"></script>
 <script src="static/js/macarons.js"></script>
